update: api handler
