# internal/api/user.go
@@ -6,6 +6,45 @@ import (
 	"github/xmapst/mixed-socks/internal/service"
 )
 
+// Auth
+// @Summary Auth
+// @description enable user auth
+// @Tags User
+// @Security BasicAuth
+// @Param auth body service.Auth true "user auth"
+// @Success 200 {object} JSONResult{}
+// @Failure 500 {object} JSONResult{}
+// @Router /api/auth [post]
+func enableAuth(c *gin.Context) {
+	render := Gin{Context: c}
+	var req = &service.Auth{}
+	err := c.ShouldBind(req)
+	if err != nil {
+		render.SetError(CodeErrParam, err)
+		return
+	}
+	err = req.Save()
+	if err != nil {
+		render.SetError(CodeErrMsg, err)
+		return
+	}
+	render.SetJson("saved")
+}
+
+// Auth
+// @Summary Auth
+// @description get user auth state
+// @Tags User
+// @Security BasicAuth
+// @Success 200 {object} JSONResult{}
+// @Failure 500 {object} JSONResult{}
+// @Router /api/auth [get]
+func getAuth(c *gin.Context) {
+	render := Gin{Context: c}
+	auth := &service.Auth{}
+	render.SetJson(auth.Get())
+}
+
 // list
 // @Summary list
 // @description List all user
@@ -16,7 +55,8 @@ import (
 // @Router /api/user [get]
 func listUser(c *gin.Context) {
 	render := Gin{Context: c}
-	res, err := service.ListUser()
+	user := &service.User{}
+	res, err := user.List()
 	if err != nil {
 		render.SetError(CodeErrMsg, err)
 		return
@@ -29,19 +69,19 @@ func listUser(c *gin.Context) {
 // @description create or update user
 // @Tags User
 // @Security BasicAuth
-// @Param scripts body service.User true "user"
+// @Param user body service.User true "user"
 // @Success 200 {object} JSONResult{}
 // @Failure 500 {object} JSONResult{}
 // @Router /api/user [post]
 func saveUser(c *gin.Context) {
 	render := Gin{Context: c}
 	var req = &service.User{}
-	err := c.ShouldBind(&req)
+	err := c.ShouldBind(req)
 	if err != nil {
 		render.SetError(CodeErrParam, err)
 		return
 	}
-	err = service.SaveUser(req)
+	err = req.Save()
 	if err != nil {
 		render.SetError(CodeErrMsg, err)
 		return
@@ -65,7 +105,10 @@ func delUser(c *gin.Context) {
 		render.SetError(CodeErrParam, errors.New("missing id parameter"))
 		return
 	}
-	err := service.DelUser(username)
+	user := &service.User{
+		Name: username,
+	}
+	err := user.Delete()
 	if err != nil {
 		render.SetError(CodeErrMsg, err)
 		return
